--- a/ChenXiaoLiu-Lab3/Info.plist
+++ b/ChenXiaoLiu-Lab3/Info.plist
@@ -2,6 +2,37 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Save Drawing Items</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Choose a Photo as canvas background</string>
+	<key>UIApplicationShortcutItems</key>
+	<array>
+		<dict>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Share this App</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>shareThisApp</string>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeShare</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Draw a solid square</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>drawSolidSquare</string>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeCompose</string>
+		</dict>
+		<dict>
+			<key>UIApplicationShortcutItemTitle</key>
+			<string>Draw a outlined square</string>
+			<key>UIApplicationShortcutItemType</key>
+			<string>drawOutlineSquare</string>
+			<key>UIApplicationShortcutItemIconType</key>
+			<string>UIApplicationShortcutIconTypeCompose</string>
+		</dict>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
